# kinematic_calibration

./: .gitignore
src/.kdev4/: src.kdev4
src/calibration/: package.xml  (+1 more)
src/kinematic_calibration/: CMakeLists.txt  README.txt  package.xml
src/kinematic_calibration/cmake/: Findaruco.cmake
src/kinematic_calibration/config/: params.yaml  params_general.yaml  params_larm_capturing.yaml  params_larm_general.yaml  params_lleg_general.yaml  params_rarm_capturing.yaml  params_rarm_general.yaml  params_rleg_capturing.yaml  params_rleg_general.yaml  params_xylo_larm_capturing.yaml  params_xylo_larm_general.yaml  params_xylo_rarm_capturing.yaml  params_xylo_rarm_general.yaml  poses.yaml  poses_generated.yaml  poses_larm.yaml  poses_larm_all.yaml  poses_larm_generated_old.yaml  poses_lleg.yaml  poses_rarm.yaml  poses_rarm_all.yaml  poses_rarm_generated_old.yaml  poses_rleg.yaml  poses_xylo_larm.yaml  poses_xylo_rarm.yaml
src/kinematic_calibration/include/: DataCapture.h  FrameImageConverter.h  G2oJointOffsetOptimization.h  JointOffsetOptimization.h  JointUpdate.h  KinematicCalibrationState.h  KinematicChain.h  KinematicChainTfComparison.h  MeasurementData.h  ModelLoader.h  OptimizationNode.h
src/kinematic_calibration/include/common/: AbstractContext.h  ArucoContext.h  CalibrationContext.h  CheckerboardContext.h  CircleContext.h  ColorMarkerContext.h  ContextFactory.h  ErrorModel.h  FrameImageConverter.h  KinematicChain.h  MarkerContext.h  MeasurementImageExtractionNode.h  MeasurementPose.h  MeasurementToPoseNode.h  ModelLoader.h  ObservabilityIndex.h  PoseSampling.h  PoseSelectionNode.h  PoseSet.h
src/kinematic_calibration/include/data_capturing/: ArucoMarkerDetection.h  CheckerboardDetection.h  CircleDetection.h  ColorMarkerDetection.h  DataCapture.h  ImagePreprocessingNode.h  MarkerDetection.h  PauseManager.h  TemperatureNode.h
src/kinematic_calibration/include/optimization/: CameraIntrinsicsVertex.h  CheckerboardMeasurementEdge.h  CircleMeasurementEdge.h  G2oJointOffsetOptimization.h  JointOffsetOptimization.h  JointOffsetVertex.h  KinematicCalibrationState.h  LocOptJointOffsetOptimization.h  LocOptKinCalState.h  MeasurementEdge.h  OptimizationNode.h  TransformationVertex.h  ValidationNode.h
src/kinematic_calibration/include/pose_generation/: ObservabilityIndex.h  PoseSampling.h  PoseSelectionNode.h  PoseSelectionStrategy.h  PoseSource.h  ValidationPoseSelectionNode.h
src/kinematic_calibration/include/result_publishing/: CameraTransformUpdate.h  JointUpdate.h  UrdfUpdate.h
src/kinematic_calibration/launch/: calibrate_xylo_rarm.launch  data_capturing.launch  data_larm.launch  data_rarm.launch  optimization.launch  pose_generation.launch  test.launch  validation.launch
src/kinematic_calibration/msg/: calibrationResult.msg  measurementData.msg
src/kinematic_calibration/scripts/: IgnoreMeasurementsConfigGeneration.py  JointStatesToPose.py  MeasurementPlot.py  PoseGenerator.py  PoseReindexer.py  ReflectPoses.py  joint_states_arm.txt
src/kinematic_calibration/scripts/data/: joint_states_larm20131121a.txt  joint_states_larm_1.txt  joint_states_test.txt  poses.txt  poses_generated.yaml  poses_sorted.yaml  test.yaml
src/kinematic_calibration/src/: CheckerboardDetection.cpp  CheckerboardDetectionMain.cpp  DataCapture.cpp  DataCaptureMain.cpp  FrameImageConverter.cpp  FrameImageConverterMain.cpp  G2oJointOffsetOptimization.cpp  JointOffsetOptimization.cpp  JointUpdate.cpp  JointUpdateNode.cpp  KinematicCalibrationState.cpp  KinematicChain.cpp  KinematicChainTfComparison.cpp  MeasurementData.cpp  ModelLoader.cpp  OptimizationNode.cpp
src/kinematic_calibration/src/common/: AbstractContext.cpp  ArucoContext.cpp  CalibrationContext.cpp  CheckerboardContext.cpp  ColorMarkerContext.cpp  ContextFactory.cpp  ErrorModel.cpp  FrameImageConverter.cpp  FrameImageConverterMain.cpp  KinematicChain.cpp  KinematicChainTfComparison.cpp  MeasurementPose.cpp  MeasurementToPoseNode.cpp  ModelLoader.cpp  ObservabilityIndex.cpp  PoseSampling.cpp  PoseSamplingMain.cpp  PoseSelectionNode.cpp  PoseSet.cpp
src/kinematic_calibration/src/data_capturing/: ArucoMarkerDetection.cpp  CheckerboardDetection.cpp  CheckerboardDetectionMain.cpp  CircleDetection.cpp  CircleDetectionMain.cpp  ColorMarkerDetection.cpp  ColorMarkerDetectionMain.cpp  DataCapture.cpp  DataCaptureMain.cpp  ImagePreprocessingNode.cpp  MarkerDetection.cpp  PauseManager.cpp  SinglePointMarkerDetection.cpp  TemperatureNode.cpp
src/kinematic_calibration/src/optimization/: CameraIntrinsicsVertex.cpp  CheckerboardMeasurementEdge.cpp  CircleMeasurementEdge.cpp  G2oJointOffsetOptimization.cpp  JointOffsetOptimization.cpp  JointOffsetVertex.cpp  KinematicCalibrationState.cpp  LocOptJointOffsetOptimization.cpp  LocOptKinCalState.cpp  MeasurementEdge.cpp  OptimizationNode.cpp  TransformationVertex.cpp  ValidationNode.cpp
src/kinematic_calibration/src/pose_generation/: ObservabilityIndex.cpp  PoseSampling.cpp  PoseSamplingMain.cpp  PoseSelectionNode.cpp  PoseSelectionNodeMain.cpp  PoseSelectionStrategy.cpp  PoseSource.cpp  ValidationPoseSelectionNode.cpp
src/kinematic_calibration/src/result_publishing/: CameraTransformUpdate.cpp  JointUpdate.cpp  JointUpdateNode.cpp  UpdateNode.cpp  UrdfUpdate.cpp
src/kinematic_calibration/test/: CameraIntrinsicsVertexTest.cpp  CheckerboardDetectionTest.cpp  ErrorModelTest.cpp  JointOffsetVertexTest.cpp  JointUpdateTest.cpp  KinematicChainTest.cpp  MeasurementDataTest.cpp  ModelLoaderTest.cpp  TransformationVertexTest.cpp  nao.urdf
src/kinematic_calibration/validation/: README_camera_parameter.txt  README_optimierung_cross_validation.txt  README_pose_selection.txt  merge_results.sh  merge_results_test_data.sh  observability_index.sh  validate_number_of_poses.sh  validate_number_of_poses_all.sh
src/kinematic_calibration_gui/: CMakeLists.txt  CMakeLists.txt.user.2.7pre1  package.xml
src/kinematic_calibration_gui/include/kinematic_calibration_gui/: main_window.hpp  qnode.hpp
src/kinematic_calibration_gui/src/: main.cpp  main_window.cpp  qnode.cpp
src/kinematic_calibration_gui/ui/: main_window.ui
(+8791 files in other folders)
