<?xml version="1.0"?>
<package>
  <name>kinematic_calibration_gui</name>
  <version>0.1.0</version>
  <description>

     kinematic_calibration_gui

  </description>
  <maintainer email="stefan.w.ggb@gmail.com">Stefan</maintainer>
  <author>Stefan</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>kinematic_calibration</build_depend>
  <build_depend>orocos_kdl</build_depend>	
  <build_depend>urdf</build_depend>	
  <build_depend>kdl_parser</build_depend>
  
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>kinematic_calibration</run_depend>
  <run_depend>orocos_kdl</run_depend>	
  <run_depend>urdf</run_depend>
 
</package>
